--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
         <p></p>
         {% endif %}
 
-        <img src="https://raw.githubusercontent.com/Eclectikus/eclectikus/master/figure/citynight.png" alt="Hola"
+        <img src="https://raw.githubusercontent.com/Eclectikus/eclectikus.github.io/master/figure/citynight.png" alt="Hola"
           width="300">
 
         <h2>Estado de la página</h2>
