--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,30 @@
 
 @import "{{ site.theme }}";
 
+header {
+    background-image: url(https://raw.githubusercontent.com/Eclectikus/eclectikus.github.io/master/assets/images/header-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 160px;
+    /*CHANGE TO THE HEIGHT OF YOUR BANNER*/
+}
+
+header h1 {
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 1.2;
+    color: #2177e9;
+    letter-spacing: -1px;
+}
+
+header h2 {
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 1.2;
+    color: rgb(9, 155, 223);
+    letter-spacing: -1px;
+}
+
 .footer {
     position: fixed;
     left: 0;
